[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v7"] }
rand = "0.9.0-alpha.2"
engine = { path = "../engine" }
array2d = { version = "0.3.2", features = ["serde"] }
serde_json = "1.0"
error-stack = "0.5.0"