[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
engine = { path = "../engine" }
ipc = { path = "../ipc" }
redis = { version = "0.27.2", features = ["uuid", "aio", "tokio-comp"] }
uuid = { version = "1.10.0", features = ["serde", "v7", "v4"] }
error-stack = "0.5.0"
bincode = "1.3.3"
clap = { version = "4.5.18", features = ["derive"] }
async-trait = "0.1.83"
serde_json = "1.0.128"
lapin = "2.5.0"
futures = "0.3.30"

[dev-dependencies]
testcontainers = "0.23.1"
tokio-test = "0.4.4"
